--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -90,3 +90,7 @@ key_bindings:
   - { key: Home, chars: "\x1b[1;3H" }
   - { key: End, chars: "\x1b[1;3F" }
   - { key: Return, mods: Command, action: ToggleSimpleFullscreen }
+  - { key: J,        mods: Alt,     chars: "\x1bj"                       }
+  - { key: K,        mods: Alt,     chars: "\x1bk"                       }
+  - { key: H,        mods: Alt,     chars: "\x1bh"                       }
+  - { key: L,        mods: Alt,     chars: "\x1bl"                       }
