--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -46,7 +46,7 @@ font:
     style: Bold Italic
 
   # Point size
-  size: 15.0
+  size: 14.0
 
   offset:
     x: 0
@@ -56,10 +56,16 @@ font:
     y: 0
 
 window:
+  position:
+    x: 0
+    y: 0
   padding:
-    x: 2
-    y: 2
-
+    x: 5
+    y: 0
+  dimensions:
+    columns: 200
+    lines: 400
+  startup_mode: SimpleFullscreen
 scrolling:
   # Maximum number of lines in the scrollback buffer.
   # Specifying '0' will disable scrolling.
